<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="yuri.kl.com.ua.calc_test.MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">
            <EditText
                android:id="@+id/viewDisplay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="viewEnd"
                android:textSize="60sp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:hint="0"
                android:maxLines="2"
                android:maxLength="16"
                android:ems="16"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:background="@color/colorAccent"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:orientation="vertical">
            <TableLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TableRow
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/buttonC"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/cancel"
                        android:textColor="@color/colorOrange"
                        android:textSize="50sp"
                        android:background="@color/colorAccent"/>

                    <Button
                        android:id="@+id/buttonMul"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/multiply"
                        android:textColor="@color/colorBlue"
                        android:textSize="40sp"
                        android:background="@color/colorAccent"/>

                    <Button
                        android:id="@+id/buttonDiv"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/division"
                        android:textColor="@color/colorBlue"
                        android:textSize="40sp"
                        android:background="@color/colorAccent"/>

                    <Button
                        android:id="@+id/buttonAdd"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/plus"
                        android:textColor="@color/colorBlue"
                        android:textSize="40sp"
                        android:background="@color/colorAccent"/>
                </TableRow>
                <TableRow
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/button7"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/seven"
                        android:textColor="@color/colorWhite"
                        android:textSize="40sp"
                        android:background="@color/colorAccent"/>

                    <Button
                        android:id="@+id/button8"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/eight"
                        android:textColor="@color/colorWhite"
                        android:textSize="40sp"
                        android:background="@color/colorAccent"/>

                    <Button
                        android:id="@+id/button9"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/nine"
                        android:textColor="@color/colorWhite"
                        android:textSize="40sp"
                        android:background="@color/colorAccent"/>

                    <Button
                        android:id="@+id/buttonSub"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/minus"
                        android:textColor="@color/colorBlue"
                        android:textSize="40sp"
                        android:background="@color/colorAccent"/>
                </TableRow>
                <TableRow
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/button4"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/four"
                        android:textColor="@color/colorWhite"
                        android:textSize="40sp"
                        android:background="@color/colorAccent"/>

                    <Button
                        android:id="@+id/button5"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/five"
                        android:textColor="@color/colorWhite"
                        android:textSize="40sp"
                        android:background="@color/colorAccent"/>

                    <Button
                        android:id="@+id/button6"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/six"
                        android:textColor="@color/colorWhite"
                        android:textSize="40sp"
                        android:background="@color/colorAccent"/>

                    <Button
                        android:id="@+id/buttonDot"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/dot"
                        android:textColor="@color/colorBlue"
                        android:textSize="40sp"
                        android:background="@color/colorAccent"/>
                </TableRow>
                <TableRow
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/button1"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/one"
                        android:textColor="@color/colorWhite"
                        android:textSize="40sp"
                        android:background="@color/colorAccent"/>

                    <Button
                        android:id="@+id/button2"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/two"
                        android:textColor="@color/colorWhite"
                        android:textSize="40sp"
                        android:background="@color/colorAccent"/>

                    <Button
                        android:id="@+id/button3"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/three"
                        android:textColor="@color/colorWhite"
                        android:textSize="40sp"
                        android:background="@color/colorAccent"/>

                    <Button
                        android:id="@+id/buttonPer"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/percent"
                        android:textColor="@color/colorBlue"
                        android:textSize="40sp"
                        android:background="@color/colorAccent"/>
                </TableRow>
                <TableRow
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <Button
                        android:id="@+id/button0"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/zero"
                        android:textColor="@color/colorWhite"
                        android:textSize="40sp"
                        android:background="@color/colorAccent"/>
                    <Button
                        android:id="@+id/buttonEql"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/equally"
                        android:textColor="@color/colorWhite"
                        android:textSize="40sp"
                        android:background="@color/colorBlue"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>